# PIAIC_Q2_B61

./: 00_helloworld_ai_api_Prompting_22_12_2024_ipynb.ipynb  19012025_Fine_tuning_tutorial_GEMINI_API.ipynb  201_12012025_Proj3_RAG_FUNCTION_CALLING.ipynb  201_12012025_proj3_rag_function_calling.ipynb  Crew_AI_uv_Installation_26012025.ipynb  Project2_LangChainRAG_Project_Final.ipynb  Project2_LangChainRAG_Project_Inprogress.ipynb  Project_1_LangChain_Hello_World_Project_05012025.ipynb  README.md  Task1_GenList10SampStds_Then_Function_calling_config.ipynb  live_api_starter_22122024.ipynb
1- 201_UV_LiteLLM/: Building effective agents 26022025.md  Building effective agents.md  readme.md
1- 201_UV_LiteLLM/Online_Class_UV/proj1/: main.py  (+1 more)
201_UV/UV TESTING/project2/: hello.py  pyproject.toml
201_UV/explore-uv/: hello.py  pyproject.toml
201_UV/my-projet2/: hello.py  pyproject.toml
201_UV/my-projet2/src/my_projet2/: __init__.py
201_UV/my_project3/: hello.py  pyproject.toml
201_UV/project1/: pyproject.toml
201_UV/project2/: pyproject.toml
PIAIC Q2 Projects/: Project3_LangChain FunctionTool Calling CalculatorPIAIC Q2 Projects Project3_LangChain FunctionTool Calling Calculator201_12012025_Proj3_RAG_FUNCTION_CALLING.ipynb  Project4_Finetuning19012025_Fine_tuning_tutorial_GEMINI_API.ipynb
PIAIC Q2 Projects /Project2_LangChain RAG Project/: Project2_LangChainRAG_Project_Final.ipynb  Project2_LangChainRAG_Project_Inprogress.ipynb
quickstarts/: 102_Final_Function_calling_config.ipynb  Function_calling_config.ipynb  Function_calling_config_11012025.ipynb
(+11 files in other folders)
