[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "CrystleYS", email = "crystleys83@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
project1 = "project1:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
